--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.3.4",
+    "flag-icons": "^6.6.6",
     "vue": "^3.2.47"
   },
   "devDependencies": {
